--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-S3_BUCKET_NAME=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_REGION=
+S3_BUCKET_NAME=jjsdevcampbucket
+AWS_ACCESS_KEY_ID=AKIAIIZ52G52PFAMU5YQ
+AWS_SECRET_ACCESS_KEY=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
+AWS_REGION=us-west-1
