style updated title added need to styleize login views

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-S3_BUCKET_NAME=jjsdevcampbucket
-AWS_ACCESS_KEY_ID=AKIAIIZ52G52PFAMU5YQ
-AWS_SECRET_ACCESS_KEY=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
-AWS_REGION=us-west-1
+S3_BUCKET_NAME=jexconnectinfo
+AWS_ACCESS_KEY_ID=AKIAJ4C3QO5LCHRHS6WA
+AWS_SECRET_ACCESS_KEY=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
+AWS_REGION=us-east-2
